--- a/.meteor/gn.css
+++ b/.meteor/gn.css
@@ -1,7 +1,7 @@
  @import url(http://fonts.googleapis.com/css?family=Lato:400,700,300);
 
 body {
-    font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
     background: #fcfcfc;
 }
 
