--- a/client/templates/sponsor_magellan.html
+++ b/client/templates/sponsor_magellan.html
@@ -1,4 +1,4 @@
 <template name="sponsor_magellan">
     <div class="magellan-header">SPONSORED BY</div>
-    <a href="http://hyy.pe/" target="_blank"><img src="https://www.dropbox.com/s/8kcdf239me7hzhv/ad.png?dl=0" class="hyype-ad"></a>
+    <a href="http://hyy.pe/" target="_blank"><img src="https://github.com/andychip/gamernews/blob/master/.meteor/assets/ad.png?raw=true" class="hyype-ad"></a>
 </template>
